--- a/words/web.html
+++ b/words/web.html
@@ -63,7 +63,7 @@ https://www.iconfinder.com/marcosebald
   <!-- End SlidesJS Required -->
 
   <!-- SlidesJS Required: Link to jquery.slides.js -->
-  <script src="web/jquery.slides.min.js"></script>
+  <script src="jquery.slides.min.js"></script>
   <!-- End SlidesJS Required -->
 
   <!-- SlidesJS Required: Initialize SlidesJS with a jQuery doc ready -->
