--- a/words/web.html
+++ b/words/web.html
@@ -84,7 +84,7 @@ https://www.iconfinder.com/marcosebald
 <div>
 	
 </div>
-<div id="banner" class="wrapper img-centered"><img src="http://imgs.xkcd.com/comics/new_car.png" width="100%" height="300" alt="" /></div>
+<div id="banner" class="wrapper img-centered"><img src="https://imgs.xkcd.com/comics/new_car.png" width="100%" height="300" alt="" /></div>
 <div id="footer">
 	<div class="container">
 		<div class="fbox1">
