--- a/words/web.html
+++ b/words/web.html
@@ -23,7 +23,7 @@ https://www.iconfinder.com/marcosebald
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href="../default.css" rel="stylesheet" type="text/css" media="all" />
 <link href="../fonts.css" rel="stylesheet" type="text/css" media="all" />
-
+<link rel="stylesheet" href="font-awesome.min.css">
 <!--[if IE 6]><link href="default_ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
 
 </head>
