--- a/words/web.html
+++ b/words/web.html
@@ -59,8 +59,8 @@ https://www.iconfinder.com/marcosebald
       <img src="https://cloud.githubusercontent.com/assets/16012579/11764964/14f456f2-a10c-11e5-948a-7aa90969332d.PNG" alt="#">
       <img src="https://cloud.githubusercontent.com/assets/16012579/11764965/24f0de90-a10c-11e5-9438-e2aadca9959e.PNG" alt="#">
       <img src="https://cloud.githubusercontent.com/assets/16012579/11764966/3642363a-a10c-11e5-8964-f6a59548365d.PNG" alt="#">
-      <a href="#" class="slidesjs-previous slidesjs-navigation"><i class="material-icons md-18">keyboard arrow left</i></a>
-      <a href="#" class="slidesjs-next slidesjs-navigation"><i class="material-icons md-18">keyboard arrow right</i></a>
+      <a href="#" class="slidesjs-previous slidesjs-navigation"><i class="material-icons md-18">keyboard_arrow_left</i></a>
+      <a href="#" class="slidesjs-next slidesjs-navigation"><i class="material-icons md-18">keyboard_arrow_right</i></a>
       
     </div>
   </div>
@@ -91,7 +91,7 @@ https://www.iconfinder.com/marcosebald
 <div>
 	
 </div>
-<div id="banner" class="wrapper img-centered"><img src="https://imgs.xkcd.com/comics/new_car.png" width="100%" height="300" alt="" /></div>
+<div id="banner" class="wrapper img-centered"><img src="https://imgs.xkcd.com/comics/new_car.png" width="100%" height="250" alt="" /></div>
 <div id="footer">
 	<div class="container">
 		<div class="fbox1">
