--- a/words/web.html
+++ b/words/web.html
@@ -46,7 +46,8 @@ https://www.iconfinder.com/marcosebald
 	</div>
 </div>
 <div id="wrapper1">
- 	<h1>Page</h1>
+ 	<h1>Hackathon For Humanity-CharityMe Webpage</h1>
+ 	<p>Description: CharityMe was a mobile and web based service designed for the Missouri University of Science and Technology's 50th Anniversary Hackathon. The goal of the Project was to create a web or mobile service that bettered society. Our team created a service that would allow for users to post, browse, and search for charities. These charities could include institutions or individual users offering up goods or services for free. The idea was to make a 'craigslist' type service that was focused entirely around free goods and services.</p>
   <!-- The container is used to define the width of the slideshow -->
   <div class="container">
     <div id="slides">
@@ -85,10 +86,11 @@ https://www.iconfinder.com/marcosebald
   </script>
 
  	<h1>Page Code</h1>
+ 	<p>Below is the source code for the webpage.</p>
 	<script src="https://gist.github.com/ConnorSprague/753419be5b39a8319b9b.js"></script>
 </div>
 
-<div>
+<div class="buffer">
 	
 </div>
 <div id="banner" class="wrapper img-centered"><img src="https://imgs.xkcd.com/comics/new_car.png" width="100%" height="250" alt="" /></div>
