--- a/works.html
+++ b/works.html
@@ -50,21 +50,21 @@ https://www.iconfinder.com/marcosebald
 		<div id="tbox1">
 			<div class="title">
 				<h2 href="simplysolar.html">Simply Solar</h2>
-				<a href="simplysolar.html"><img src="#" class="column-image"></a>
+				<a href="simplysolar.html"><img src="https://cloud.githubusercontent.com/assets/16012579/12244650/56c41700-b86a-11e5-869f-317a9b9da603.jpg" class="column-image"></a>
 			</div>
 			<p>An affordable, durable, modular solar collection and storage concept.</p>
 			<a href="pubworks.html" class="button">Learn More</a> </div>
 		<div id="tbox2">
 			<div class="title">
 				<h2 href="cb.html">Curetteblade</h2>
-				<a href="cb.html"><img src="#" class="column-image"></a>
+				<a href="cb.html"><img src="https://cloud.githubusercontent.com/assets/16012579/12244653/58cc945a-b86a-11e5-9a1a-a4b17fa565d3.png" class="column-image"></a>
 			</div>
 			<p>A new approach to disposable medical devices. Inludes designs for the manufacturing process utilized.</p>
 			<a href="cb.html" class="button">Learn More</a> </div>
 		<div id="tbox3">
 			<div class="title">
 				<h2 href="hpv.html">Human Powered Vehicle</h2>
-				<a href="hpv.html"><img src="#" class="column-image"></a>
+				<a href="hpv.html"><img src="https://cloud.githubusercontent.com/assets/16012579/12244658/5bc17ffe-b86a-11e5-8531-195adbc3922e.jpg" class="column-image"></a>
 			</div>
 			<p>I participated in the <a href="https://orgsync.com/66296/chapter"> Missouri S&T Human Powered Vehicle</a> team as the Lead Fairing Engineer.</p>
 			<a href="simplysolar.html" class="button">Learn More</a> </div>
