--- a/works.html
+++ b/works.html
@@ -64,7 +64,7 @@ https://www.iconfinder.com/marcosebald
 		<div id="tbox3">
 			<div class="title">
 				<h2 href="hpv.html">Human Powered Vehicle</h2>
-				<a href="hpv.html"><img src="https://cloud.githubusercontent.com/assets/16012579/12244658/5bc17ffe-b86a-11e5-8531-195adbc3922e.jpg" class="column-image"></a>
+				<a href="hpv.html"><img src="https://cloud.githubusercontent.com/assets/16012579/12244737/ad5e029c-b86a-11e5-9b09-e5888c09c9bf.PNG" class="column-image"></a>
 			</div>
 			<p>I participated in the <a href="https://orgsync.com/66296/chapter"> Missouri S&T Human Powered Vehicle</a> team as the Lead Fairing Engineer.</p>
 			<a href="simplysolar.html" class="button">Learn More</a> </div>
