--- a/works.html
+++ b/works.html
@@ -52,7 +52,7 @@ https://www.iconfinder.com/marcosebald
 				<h2 href="simplysolar.html">Simply Solar</h2>
 				<a href="simplysolar.html"><img src="https://cloud.githubusercontent.com/assets/16012579/12244650/56c41700-b86a-11e5-869f-317a9b9da603.jpg" class="column-image"></a>
 			</div>
-			<p>An affordable, durable, modular solar collection and storage concept.</p>
+			<p>An affordable, durable, modular solar collection and storage concept for use in public spaces.</p>
 			<a href="pubworks.html" class="button">Learn More</a> </div>
 		<div id="tbox2">
 			<div class="title">
