--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ https://www.iconfinder.com/marcosebald
 		<div id="menu">
 			<ul>
 				<li class="active"><a href="index.html" accesskey="1" title="">Homepage</a></li>
-				<li><a href="works.html" accesskey="2" title="">Works</a></li>
+				<li><a href="works/works.html" accesskey="2" title="">Works</a></li>
 				<li><a href="words.html" accesskey="3" title="">Words</a></li>
 				<li><a href="contact.html" accesskey="4" title="">Waterfall</a></li>
 			</ul>
