--- a/works/works.html
+++ b/works/works.html
@@ -35,10 +35,10 @@ https://www.iconfinder.com/marcosebald
 		</div>
 		<div id="menu">
 			<ul>
-				<li><a href="index.html" accesskey="1" title="">Homepage</a></li>
+				<li><a href="../index.html" accesskey="1" title="">Homepage</a></li>
 				<li class="active"><a href="works.html" accesskey="2" title="">Works</a></li>
-				<li><a href="words.html" accesskey="3" title="">Words</a></li>
-				<li><a href="contact.html" accesskey="4" title="">Waterfall</a></li>
+				<li><a href="../words/words.html" accesskey="3" title="">Words</a></li>
+				<li><a href="../contact.html" accesskey="4" title="">Waterfall</a></li>
 			</ul>
 		</div>
 	</div>
