--- a/works/simplysolar.html
+++ b/works/simplysolar.html
@@ -23,7 +23,7 @@ https://www.iconfinder.com/marcosebald
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href="../default.css" rel="stylesheet" type="text/css" media="all" />
 <link href="../fonts.css" rel="stylesheet" type="text/css" media="all" />
-<link rel="stylesheet" href="font-awesome.min.css">
+<link rel="stylesheet" href="../words/font-awesome.min.css">
 <!--[if IE 6]><link href="default_ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
 
 </head>
@@ -65,8 +65,28 @@ https://www.iconfinder.com/marcosebald
       		<img src="https://cloud.githubusercontent.com/assets/16012579/11764966/3642363a-a10c-11e5-8964-f6a59548365d.PNG" alt="#">
       		<a href="#" class="slidesjs-previous slidesjs-navigation"><i class="material-icons md-18">keyboard_arrow_left</i></a>
       		<a href="#" class="slidesjs-next slidesjs-navigation"><i class="material-icons md-18">keyboard_arrow_right</i></a>
-    	</div>
+    		</div>
 	</div>
+	
+  <!-- SlidesJS Required: Link to jQuery -->
+  <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
+  <!-- End SlidesJS Required -->
+
+  <!-- SlidesJS Required: Link to jquery.slides.js -->
+  <script src=".../web/jquery.slides.min.js"></script>
+  <!-- End SlidesJS Required -->
+
+  <!-- SlidesJS Required: Initialize SlidesJS with a jQuery doc ready -->
+  <script>
+    $(function() {
+      $('#slides').slidesjs({
+        width: 940,
+        height: 528,
+        navigation: false
+      });
+    });
+  </script>
+
 </div>
 <div id="footer">
 	<div class="container">
