--- a/works/simplysolar.html
+++ b/works/simplysolar.html
@@ -54,15 +54,9 @@ https://www.iconfinder.com/marcosebald
 	</div>
 	<div id="banner" class="container">
     		<div id="slides">
-		 <img src="https://cloud.githubusercontent.com/assets/16012579/11764951/8f71c820-a10b-11e5-9c36-9b8f5819783a.PNG" alt="#">
-      		<img src="https://cloud.githubusercontent.com/assets/16012579/11764955/a49c7664-a10b-11e5-80c6-4c1c9ee55ec5.PNG" alt="#">
-      		<img src="https://cloud.githubusercontent.com/assets/16012579/11764957/be40451e-a10b-11e5-9fed-df3b0a956fa2.PNG" alt="#">
-      		<img src="https://cloud.githubusercontent.com/assets/16012579/11764960/d8135cc4-a10b-11e5-9e68-6c2d3c8032d2.PNG" alt="#">
-      		<img src="https://cloud.githubusercontent.com/assets/16012579/11764961/e833ffe6-a10b-11e5-983c-22ab4f225c4d.PNG" alt="#">
-      		<img src="https://cloud.githubusercontent.com/assets/16012579/11764962/fe48d5b8-a10b-11e5-9e10-7986c6c5f530.PNG" alt="#">
-      		<img src="https://cloud.githubusercontent.com/assets/16012579/11764964/14f456f2-a10c-11e5-948a-7aa90969332d.PNG" alt="#">
-      		<img src="https://cloud.githubusercontent.com/assets/16012579/11764965/24f0de90-a10c-11e5-9438-e2aadca9959e.PNG" alt="#">
-      		<img src="https://cloud.githubusercontent.com/assets/16012579/11764966/3642363a-a10c-11e5-8964-f6a59548365d.PNG" alt="#">
+		 <img src="https://cloud.githubusercontent.com/assets/16012579/12282961/2af0126a-b968-11e5-9e56-a34181bbb2aa.png" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/12282962/2b09b468-b968-11e5-9584-e8cfe392cf14.jpg" alt="#">
+      		<img src="https://cloud.githubusercontent.com/assets/16012579/12282963/2b0ee640-b968-11e5-85d7-d50c5d7a0993.JPG" alt="#">
       		<a href="#" class="slidesjs-previous slidesjs-navigation"><i class="material-icons md-18">keyboard_arrow_left</i></a>
       		<a href="#" class="slidesjs-next slidesjs-navigation"><i class="material-icons md-18">keyboard_arrow_right</i></a>
     		</div>
